[21] fix overflow bug

--- a/21 - Email client/style.css
+++ b/21 - Email client/style.css
@@ -19,6 +19,10 @@
     flex-shrink: 0;
 }
 
+body{
+  overflow: hidden;
+}
+
 ::-webkit-scrollbar {
     width: 0px;
     height: 0px;
@@ -51,7 +55,7 @@ svg{
     max-height: 100vh;
     max-width: 100vw;
 
-    /* overflow: hidden; */
+    overflow: hidden;
     display: flex;
     position: relative;
 
@@ -301,6 +305,7 @@ svg{
 .main-content{
   flex: 1;
   display: flex;
+  overflow: hidden;
 }
 
 .mails-list{
@@ -311,6 +316,7 @@ svg{
   flex-direction: column;
 
   position: relative;
+  overflow: hidden;
 }
 
 .mails-list-header{
@@ -493,8 +499,6 @@ svg{
   justify-content: center;
 
   color: white;
-
-  position: relative;
 
   box-shadow: 0px 8px 10px #3658ff81 ;
 }
